setext/org.eclipse.escet.setext.tests/test_models/models_invalid/syntax_error_scan_smp.setext
// ------------------------------------------------------------------------------
// Copyright (c) 2010, 2020 Contributors to the Eclipse Foundation
//
// See the NOTICE file(s) distributed with this work for additional
// information regarding copyright ownership.
//
// This program and the accompanying materials are made available under the terms
// of the MIT License which is available at https://opensource.org/licenses/MIT
//
// SPDX-License-Identifier: MIT
// ------------------------------------------------------------------------------

// Unicode U+1F0B1 = "PLAYING CARD ACE OF HEARTS"
// Part of Plane 1: Supplementary Multilingual Plane (SMP).
// Encoded in UTF-8: f0 9f 82 b1
/*a🂱b*/
